fixed spacing issue for top-left box

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -17763,7 +17763,6 @@ p[name="user"] {
 }
 
 .pointsTitle {
-    padding-top: 6rem;
     font-family: PNCSans-Regular;
     font-size: xx-large
 }
